# reforge

./: .gitignore  Cakefile  Cargo.toml  Makefile  index.html  linux_build.sh  readme.md  run_game.sh  shutdown.sh
client_cargo/: Cargo.toml
content/textures/effects/: Thumbs.db
content/textures/gui/: Thumbs.db
content/textures/modules/: Thumbs.db
css/: reforge.css  spacegame.css
docker/: Dockerfile
img/: NOTES
js/: reforge.js
server_cargo/: Cargo.toml
src/: ai.rs  asset_store.rs  assets.rs  battle_context.rs  battle_scheduler.rs  battle_state.rs  battle_state_packets.rs  battle_type.rs  client.rs  client_action.rs  client_battle_state.rs  client_context.rs  client_state.rs  config.rs  game_state.rs  gui.rs  input.rs  input_system.rs  login_screen.rs  main_menu.rs  module.rs  nav_map_gui.rs  net.rs  no_encode.rs  packet_types.rs  render.rs  res.rs  sector_client.rs  sector_data.rs  sector_server.rs  sector_state.rs  server.rs  server_battle_state.rs  sfml_renderer.rs  ship.rs  ship_gen.rs  sim.rs  sim_element.rs  sim_events.rs  sim_visuals.rs  (+13 more)
src/chat/: chat_gui.rs  chat_msg.rs  chat_server.rs  mod.rs
src/login/: account.rs  login_packet.rs  login_server.rs  mod.rs
src/module/: beam_weapon.rs  cabin.rs  command.rs  damage_visual.rs  dir_shield.rs  engine.rs  mod.rs  mod_type.rs  model.rs  module_networked.rs  proj_weapon.rs  repair.rs  shield.rs  solar.rs  target.rs  target_data.rs  volley_missile.rs
src/modules/: engine.rs  mod.rs
src/ship/: mod.rs  plans.rs  ship_gen.rs
src/star_map/: mod.rs  star_map_gui.rs  star_map_server.rs
src/star_map/station/: mod.rs  ship_edit_action.rs  ship_edit_gui.rs  station_action.rs  station_client.rs  station_gui.rs  station_server.rs
