[package]

name = "reforge"
version = "0.0.0"
authors = [
    "tedsta <tderego94@gmail.com>"
]

[features]

default = ["client"]

client = []

server = []

[[bin]]

name = "reforge_client"
path = "src/client.rs"

#[[bin]]

#name = "reforge_server"
#path = "src/server.rs"

[dependencies.sdl2]

git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.pistoncore-sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston2d-opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston2d-graphics]

git = "https://github.com/pistondevelopers/graphics"

[dependencies.pistoncore-event]

git = "https://github.com/pistondevelopers/event"

[dependencies.pistoncore-input]

git = "https://github.com/pistondevelopers/input"

[dependencies.quack]

git = "https://github.com/pistondevelopers/quack"

[dependencies.shader_version]

git = "https://github.com/pistondevelopers/shader_version"

[dependencies.pistoncore-window]

git = "https://github.com/pistondevelopers/window"

[dependencies.vecmath]

git = "https://github.com/pistondevelopers/vecmath"

[dependencies.freetype-rs]

git = "https://github.com/pistondevelopers/freetype-rs"

[dependencies.sdl2_mixer]

git = "https://github.com/tedsta/rust-sdl2_mixer"

[dependencies.bincode]

git = "https://github.com/tyoverby/bincode.git"

[dependencies]

time = "0.1.*"
rustc-serialize = "0.3.*"
