[package]

name = "reforge"
version = "0.0.0"
authors = [
    "tedsta <tderego94@gmail.com>"
]

[features]

default = ["client"]
client = []

[[bin]]

name = "reforge_client"
path = "../src/client.rs"

[dependencies.sdl2]
#git = "https://github.com/AngryLawyer/rust-sdl2"
version = "0.2.1"

[dependencies.sdl2_mixer]
#git = "https://github.com/andelf/rust-sdl2_mixer"
version = "0.2.1"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/pistondevelopers/glutin_window"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.freetype-rs]
git = "https://github.com/pistondevelopers/freetype-rs"
#version = "0.0.10"

[dependencies.vecmath]
#git = "https://github.com/pistondevelopers/vecmath"
version = "0.0.23"

[dependencies.piston-float]
#git = "https://github.com/pistondevelopers/float"
version = "0.0.2"

[dependencies.bincode]
#git = "https://github.com/tyoverby/bincode.git"
version = "0.3.0"

[dependencies]

time = "0.1.*"
rustc-serialize = "0.3.*"
rand = "0.3.7"
num = "*"
