[package]

name = "reforge"
version = "0.0.0"
authors = [
    "tedsta <tderego94@gmail.com>"
]

[features]

default = ["client"]
client = []

[[bin]]

name = "reforge_client"
path = "../src/client.rs"

[dependencies.sdl2]
#git = "https://github.com/AngryLawyer/rust-sdl2"
version = "0.2.1"

[dependencies.sdl2_mixer]
#git = "https://github.com/andelf/rust-sdl2_mixer"
version = "0.2.1"

[dependencies.freetype-rs]
#git = "https://github.com/pistondevelopers/freetype-rs"
version = "0.1.0"

[dependencies.vecmath]
#git = "https://github.com/pistondevelopers/vecmath"
version = "0.0.23"

[dependencies.piston-float]
#git = "https://github.com/pistondevelopers/float"
version = "0.0.2"

[dependencies.bincode]
#git = "https://github.com/tyoverby/bincode.git"
version = "0.3.0"

[dependencies]

time = "0.1.*"
rustc-serialize = "0.3.*"
rand = "0.3.7"
num = "*"

piston = "0.1.4"
piston2d-graphics = "0.1.4"
pistoncore-glutin_window = "0.1.0"
piston2d-opengl_graphics = "0.1.0"
