[package]

name = "reforge"
version = "0.0.0"
authors = [
    "tedsta <tderego94@gmail.com>"
]

[features]

default = ["client"]
client = []

[[bin]]

name = "reforge_client"
path = "../src/client.rs"

[dependencies.piston-float]
version = "0.0.2"

[dependencies.vecmath]
#git = "https://github.com/pistondevelopers/vecmath"
version = "0.0.23"

[dependencies]

time = "0.1.*"
rand = "0.3.7"
num = "*"

serde = "1"
serde_derive = "1"
erased-serde = "0.3"
bincode = "1.0.1"

ggez = "*"
gfx_core = "*"
nalgebra = "0.8"
